<resources>
    <string name="app_name">Flash Back</string>
    <string name="menu_log_in">Log in</string>
    <string name="menu_credits">Credits</string>
    <string name="credits_made_by">The app was made by</string>
    <string name="credits_authors">Marcin Fassa\n&amp;\nPatryk Kudyk</string>
    <string name="credits_icons">Icon made by\nEucalyp</string>
    <string name="hint_login">Login</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_repeat">Confirm password</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_email_repeat">Confirm e-mail</string>
    <string name="login_login">Log In</string>
    <string name="login_register_question">Don\'t have an account yet?</string>
    <string name="login_register">Sign up</string>
    <string name="register_back">Back to log in</string>
    <string name="menu_logged_packages">My packages</string>
    <string name="menu_logged_new_words">New words</string>
    <string name="menu_logged_credits">Credits</string>
    <string name="menu_logged_logout">Log out</string>
    <string name="package_add_new">Add new package</string>
    <string name="hint_package_name">Package name</string>
    <string name="button_add">Add</string>
    <string name="button_delete_yes">Yes</string>
    <string name="button_delete_no">No</string>
    <string name="delete_question_package">Are you sure to delete package?</string>
    <string name="toast_package_name_not_null">Package name cannot be empty</string>
    <string name="toast_package_added">Package successfully added</string>
    <string name="toast_package_not_added">Something went wrong, try again</string>
    <string name="toast_flashcard_added">Flashcard successfully added</string>
    <string name="toast_flashcard_not_added">Something went wrong, try again</string>
    <string name="toast_package_changed">Package successfully changed</string>
    <string name="toast_package_not_changed">Something went wrong, try again</string>
    <string name="toast_package_deleted">Package successfully deleted</string>
    <string name="toast_package_not_deleted">Something went wrong, try again</string>
    <string name="toast_flashcard_changed">Flashcard successfully changed</string>
    <string name="toast_flashcard_not_changed">Something went wrong, try again</string>
    <string name="flashcard_add_new">Add new flashcard</string>
    <string name="flashcard_review_classic">Classic Review</string>
    <string name="flashcard_learn_new_words">Learn New Words</string>
    <string name="flashcard_review_hard_words">Hard Words</string>
    <string name="delete_question_flashcard">Are you sure to delete flashcard?</string>
    <string name="hint_flashcard_polish">Polish</string>
    <string name="hint_flashcard_english">English</string>
    <string name="toast_flashcard_not_null">Flashcard fields cannot be empty</string>
    <string name="toast_flashcard_not_null_2">Flashcard field cannot be empty</string>
    <string name="review_check">Check</string>
    <string name="review_skip">Skip</string>
    <string name="review_quit">Quit</string>
    <string name="review_next">Next</string>
    <string name="summary_title">Review Summary</string>
    <string name="summary_correct">Correct:</string>
    <string name="summary_skipped">Skipped:</string>
    <string name="summary_back">Back to flashcards</string>
    <string name="learn_summary_title">Learning summary</string>
    <string name="learn_summary_text">Congratulations!\n
        You have learned new words!\n
        Now you can review them any time you want.</string>
    <string name="add_flashcard_choice">How do you want to add flashcard?</string>
    <string name="add_flashcard_manually">Manually</string>
    <string name="add_flashcard_automatically">Automatically</string>
    <string name="toast_package_not_null">Package name cannot be empty</string>
    <string name="toast_too_few_flashcards">There are too few words to review</string>
    <string name="toast_too_few_hard_flashcards">There are too few hard words to review</string>
    <string name="toast_no_words_to_learn">There are no words to learn</string>
    <string name="settings">Settings</string>
    <string name="all">All</string>
    <string name="classic_amount">Flashcards per classic review</string>
    <string name="hard_amount">Flashcards per hard words review</string>
    <string name="learning_amount">Flashcards per learning session</string>
</resources>