<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreditsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <View
            android:id="@+id/view"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/dustismo_bold"
            android:gravity="center"
            android:text="@string/menu_credits"
            android:textColor="@color/colorMainDark"
            android:textSize="55dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/dustismo_bold"
            android:gravity="center"
            android:text="@string/credits_made_by"
            android:textColor="@color/colorMainBlack"
            android:textSize="30dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/dustismo_italic"
            android:gravity="center"
            android:text="@string/credits_authors"
            android:textColor="@color/colorMainBlack"
            android:textSize="34dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.23"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/dustismo_bold"
            android:gravity="center"
            android:text="@string/credits_icons"
            android:textColor="@color/colorMainBlack"
            android:textSize="26dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.14"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>