<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.menu.LoggedMenuFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorBackground">

                <View
                    android:id="@+id/view3"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.07"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:fontFamily="@font/dustismo_bold"
                    android:gravity="center"
                    android:text="@string/app_name"
                    android:textSize="40dip"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view3" />

                <View
                    android:id="@+id/view2"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.12"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <LinearLayout
                    android:id="@+id/main_linear_layout"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="vertical"
                    android:weightSum="100"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHeight_percent="0.6"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/view2"
                    app:layout_constraintWidth_percent="0.6"
                    tools:visibility="visible">

                    <Button
                        android:id="@+id/logged_menu_button_packages"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="12"
                        android:background="@drawable/button_background_dark"
                        android:fontFamily="@font/dustismo_bold"
                        android:text="@string/menu_logged_packages"
                        android:textColor="@color/colorBackground"
                        android:textSize="24dip" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="7" />

                    <Button
                        android:id="@+id/logged_menu_button_new_words"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="12"
                        android:background="@drawable/button_background_light"
                        android:fontFamily="@font/dustismo_bold"
                        android:text="@string/menu_logged_new_words"
                        android:textColor="@color/colorBackground"
                        android:textSize="24dip" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="7" />

                    <Button
                        android:id="@+id/logged_menu_button_credits"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="12"
                        android:background="@drawable/button_background_medium"
                        android:fontFamily="@font/dustismo_bold"
                        android:text="@string/menu_logged_credits"
                        android:textColor="@color/colorBackground"
                        android:textSize="24dip" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="7" />

                    <Button
                        android:id="@+id/logged_menu_button_settings"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="12"
                        android:background="@drawable/button_background_dark"
                        android:fontFamily="@font/dustismo_bold"
                        android:text="@string/settings"
                        android:textColor="@color/colorBackground"
                        android:textSize="24dip" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="7" />

                    <Button
                        android:id="@+id/logged_menu_button_logout"
                        android:layout_width="match_parent"
                        android:layout_height="0dp"
                        android:layout_weight="12"
                        android:background="@drawable/button_background_light"
                        android:fontFamily="@font/dustismo_bold"
                        android:text="@string/menu_logged_logout"
                        android:textColor="@color/colorBackground"
                        android:textSize="24dip" />
                </LinearLayout>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>
    </ScrollView>



</FrameLayout>