<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.LogInFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|top"
            android:orientation="vertical"
            android:weightSum="100">

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="7" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="20"
                android:src="@drawable/dictionary" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="10" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="15"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:cardCornerRadius="12dp"
                app:strokeColor="@color/colorMainDarkMedium"
                app:strokeWidth="3dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_text_layout_login"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxStrokeColor="@color/colorMainDark"
                    app:errorEnabled="true"
                    app:startIconDrawable="@drawable/ic_login">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_text_edit_login"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/dustismo_bold"
                        android:hint="@string/hint_login"
                        android:inputType="text"
                        android:textColor="@color/colorMainDark"
                        android:textSize="25dip" />

                </com.google.android.material.textfield.TextInputLayout>

            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:layout_weight="15"
                android:theme="@style/Theme.MaterialComponents.Light"
                app:cardCornerRadius="12dp"
                app:strokeColor="@color/colorMainDarkMedium"
                app:strokeWidth="3dp">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/login_text_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:boxStrokeColor="@color/colorMainDark"

                    app:errorEnabled="true"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_password">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/login_text_edit_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/dustismo_bold"
                        android:hint="@string/hint_password"
                        android:inputType="textPassword"
                        android:textColor="@color/colorMainDark"
                        android:textSize="25dip" />
                </com.google.android.material.textfield.TextInputLayout>
            </com.google.android.material.card.MaterialCardView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="2" />

            <Button
                android:id="@+id/login_button_login"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginStart="70dp"
                android:fontFamily="@font/dustismo_bold"
                android:layout_marginEnd="70dp"
                android:layout_weight="7"
                android:background="@drawable/button_background_medium"
                android:text="@string/login_login"
                android:textColor="@color/colorBackground"
                android:textSize="24dip" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="16dip"
                android:fontFamily="@font/dustismo"
                android:text="@string/login_register_question" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />


            <TextView
                android:id="@+id/login_text_register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dip"
                android:fontFamily="@font/dustismo_bold"
                android:textColor="@color/colorMainDark"
                android:text="@string/login_register" />


        </LinearLayout>

    </ScrollView>


</FrameLayout>