<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.reviews.ReviewSummaryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <View
            android:id="@+id/view4"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:fontFamily="@font/dustismo_bold"
            android:gravity="center"
            android:text="@string/summary_title"
            android:textSize="40dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.13"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view4" />

        <View
            android:id="@+id/view5"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.07"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView5" />

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view5">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:fontFamily="@font/dustismo_bold"
                android:gravity="center_vertical|right"
                android:text="@string/summary_correct"
                android:textSize="30dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />

            <TextView
                android:id="@+id/summary_text_view_correct"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:fontFamily="@font/dustismo_bold"
                android:gravity="center_vertical|left"
                android:textSize="40dip"
                tools:text="21/31" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:weightSum="100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.12"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:fontFamily="@font/dustismo_bold"
                android:gravity="center_vertical|right"
                android:text="@string/summary_skipped"
                android:textSize="30dip" />

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="4" />

            <TextView
                android:id="@+id/summary_text_view_skipped"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:fontFamily="@font/dustismo_bold"
                android:gravity="center_vertical|left"
                android:textSize="40dip"
                tools:text="7" />


        </LinearLayout>

        <View
            android:id="@+id/view8"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.38"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

        <Button
            android:id="@+id/summary_button_back"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/button_background_medium"
            android:fontFamily="@font/dustismo_bold"
            android:text="@string/summary_back"
            android:textColor="@color/colorBackground"
            android:textSize="20dip"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHeight_percent="0.1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/view8" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>