<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:theme="@style/Theme.MaterialComponents.Light"
        app:cardBackgroundColor="@color/colorMainLight"
        app:cardCornerRadius="18dp"
        app:strokeColor="@color/colorMainDark"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeWidth="2dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_flashcard_english_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                app:boxBackgroundColor="@color/colorMainLight"
                app:boxStrokeColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_flashcard_english_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/dustismo_bold"
                    android:hint="@string/hint_flashcard_english"
                    android:inputType="textLongMessage"
                    android:maxLength="40"
                    android:textSize="20dip" />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/add_flashcard_polish_edit_text_layout"
                android:layout_width="match_parent"
                android:layout_height="125dp"
                app:boxBackgroundColor="@color/colorMainLight"
                app:boxStrokeColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/add_flashcard_polish_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:fontFamily="@font/dustismo_bold"
                    android:hint="@string/hint_flashcard_polish"
                    android:inputType="textLongMessage"
                    android:maxLength="70"
                    android:textSize="20dip" />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


    </com.google.android.material.card.MaterialCardView>

    <View
        android:id="@+id/view1"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@id/materialCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_height="20dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view1"
        android:weightSum="100">

        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="15" />

        <Button
            android:id="@+id/add_flashcard_button_add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="70"
            android:background="@drawable/button_background_dark"
            android:fontFamily="@font/dustismo_bold"
            android:text="@string/button_add"
            android:textAllCaps="false"
            android:textColor="@color/colorBackground"
            android:textSize="20dip" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>